--- a/eureka-service.yml
+++ b/eureka-service.yml
@@ -1,5 +1,5 @@
-server:  
-  port: ${EUREKA_SERVER_PORT:1111}   # HTTP port
+server:
+  port: 8761
 #Eureka Config
 eureka:
   instance:
@@ -8,6 +8,8 @@ eureka:
   client:  # Not a client, don't register with yourself
     registerWithEureka: false
     fetchRegistry: false
+    serviceUrl:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
   server:
     enableSelfPreservation: false
     
@@ -15,6 +17,17 @@ eureka:
 spring:
   thymeleaf:
     enabled: false     # Disable Thymeleaf 
+
+spring:
+  profiles: docker
+eureka:
+  instance:
+    hostname: docker
+  client:
+    registerWithEureka: false
+    fetchRegistry: false
+    serviceUrl:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/ 
     
 logging:  
   file: logs/${spring.application.name}.log
