--- a/auth-service.yml
+++ b/auth-service.yml
@@ -2,7 +2,7 @@
 # cookies for both the API gateway as well as the OAuth2 authorization server.
 # HTTP Server
 server:
-  port: ${PORT:3333}   # HTTP port
+  port: 8183   # HTTP port
   contextPath: /userauth 
 
 # Discovery Server Access
@@ -36,3 +36,28 @@ logging:
     org.springframework.cloud: 'INFO'
     org.springframework.web: 'INFO'
     com.microservices: 'DEBUG'
+    
+---
+spring:
+  profiles: docker
+# Datasource and JPA configuration to be used for storing the OAuth authorization details 
+# and token store
+spring:
+  datasource:
+    url: jdbc:mysql://mysql-service/auth
+    username: root
+    password: root
+    driver-class: com.mysql.jdbc.Driver
+  jpa:
+    database-platform: org.hibernate.dialect.MySQLDialect
+    show-sql: false
+    hibernate:
+      ddl-auto: create
+eureka:
+# Register our microservices to Eureka using hostnames in a Docker environment will not work, they will all get 
+# one and the same hostname. Instead we configure them to use its IP address during registration with Eureka.
+  instance:
+    preferIpAddress: true
+  client:
+    serviceUrl:
+      defaultZone: http://eureka-service/eureka/
