--- a/auth-service.yml
+++ b/auth-service.yml
@@ -4,30 +4,33 @@
 server:
   port: 8183   # HTTP port
   contextPath: /userauth 
-
+  
+spring:
+  profiles.default: default  
+---
+spring:
+  profiles: default
 # Discovery Server Access
 eureka:
   client:
     serviceUrl:
       defaultZone: ${EUREKA_ENDPOINT}
-
 security:
   user:
     password: password      
 
 # Datasource and JPA configuration to be used for storing the OAuth authorization details 
 # and token store
-spring:
-  datasource:
-    url: jdbc:mysql://192.168.99.100:3306/auth
-    username: root
-    password: password
-    driver-class: com.mysql.jdbc.Driver
-  jpa:
-    database-platform: org.hibernate.dialect.MySQLDialect
-    show-sql: false
-    hibernate:
-      ddl-auto: create
+datasource:
+  url: jdbc:mysql://192.168.99.100:3306/auth
+  username: root
+  password: password
+  driver-class: com.mysql.jdbc.Driver
+jpa:
+  database-platform: org.hibernate.dialect.MySQLDialect
+  show-sql: false
+  hibernate:
+    ddl-auto: create
 
 logging:
   file: logs/${spring.application.name}.log
@@ -42,17 +45,16 @@ spring:
   profiles: docker
 # Datasource and JPA configuration to be used for storing the OAuth authorization details 
 # and token store
-spring:
-  datasource:
-    url: jdbc:mysql://mysql-service/auth
-    username: root
-    password: root
-    driver-class: com.mysql.jdbc.Driver
-  jpa:
-    database-platform: org.hibernate.dialect.MySQLDialect
-    show-sql: false
-    hibernate:
-      ddl-auto: create
+datasource:
+  url: jdbc:mysql://mysql-service/auth
+  username: root
+  password: root
+  driver-class: com.mysql.jdbc.Driver
+jpa:
+  database-platform: org.hibernate.dialect.MySQLDialect
+  show-sql: false
+  hibernate:
+    ddl-auto: create
 eureka:
 # Register our microservices to Eureka using hostnames in a Docker environment will not work, they will all get 
 # one and the same hostname. Instead we configure them to use its IP address during registration with Eureka.
