--- a/auth-service.yml
+++ b/auth-service.yml
@@ -14,7 +14,7 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: ${EUREKA_ENDPOINT}
+      defaultZone: http://localhost:8761/eureka/
 security:
   user:
     password: password      
