--- a/account-worker-service.yml
+++ b/account-worker-service.yml
@@ -15,6 +15,12 @@ spring:
           contentType: 'application/json'
           consumer:
             durableSubscription: true
+# RabbitMQ configuration
+spring:
+  rabbitmq:
+    host: 192.168.0.31
+    username: sergio11
+    password: bisite00
 # Discovery Server Access
 eureka:
   client:
