--- a/auth-service.yml
+++ b/auth-service.yml
@@ -12,6 +12,9 @@ spring:
   profiles: default
 # Discovery Server Access
 eureka:
+  instance:
+    statusPageUrlPath: ${management.contextPath}/info
+    healthCheckUrlPath: ${management.contextPath}/health
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
