--- a/auth-service.yml
+++ b/auth-service.yml
@@ -13,8 +13,8 @@ spring:
 # Discovery Server Access
 eureka:
   instance:
-    statusPageUrlPath: ${management.contextPath}/info
-    healthCheckUrlPath: ${management.contextPath}/health
+    statusPageUrlPath: ${server.contextPath}/info
+    healthCheckUrlPath: ${server.contextPath}/health
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
