refactor(auth): add DEBUG level for spring.security

--- a/auth-service.yml
+++ b/auth-service.yml
@@ -40,6 +40,7 @@ logging:
     com.netflix.discovery: 'OFF'
     org.springframework.cloud: DEBUG
     org.springframework.web: DEBUG
+    org.springframework.security: DEBUG
     sanchez.sergio: DEBUG
     
 ---
