refactor(auth): enable debug level for hibernate

--- a/auth-service.yml
+++ b/auth-service.yml
@@ -42,6 +42,7 @@ logging:
     org.springframework.web: DEBUG
     org.springframework.security: DEBUG
     org.springframework.data: DEBUG
+    org.hibernate: DEBUG
     sanchez.sergio: DEBUG
     
 ---
