--- a/auth-service.yml
+++ b/auth-service.yml
@@ -25,6 +25,7 @@ security:
 # Datasource and JPA configuration to be used for storing the OAuth authorization details 
 # and token store
 datasource:
+  platform: h2
   url: jdbc:h2:mem:testdb;MODE=MySQL;MV_STORE=FALSE;MVCC=FALSE
   username: sa
   driver-class: org.h2.Driver
