--- a/account-web-service.yml
+++ b/account-web-service.yml
@@ -20,14 +20,19 @@ spring:
 # Datasource and JPA configuration to be used for storing the OAuth authorization details 
 # and token store
 datasource:
-  url: jdbc:h2:mem:testdb
+  type: com.zaxxer.hikari.HikariDataSource
+  url: jdbc:h2:mem:testdb;MODE=MySQL;MV_STORE=FALSE;MVCC=FALSE
   username: sa
   driver-class: org.h2.Driver
+h2:
+  console:
+    enabled: true
 jpa:
   database-platform: org.hibernate.dialect.H2Dialect
+  database: H2
   show-sql: true
   hibernate:
-   ddl-auto: create-drop
+    ddl-auto: create-drop
 # Discovery Server Access
 eureka:
   client:
