--- a/auth-service.yml
+++ b/auth-service.yml
@@ -35,9 +35,11 @@ h2:
 jpa:
   database-platform: org.hibernate.dialect.H2Dialect
   database: H2
-  show-sql: true
   hibernate:
-    ddl-auto: create-drop
+    ddl-auto: none
+    naming:
+        physical-strategy: org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
+        implicit-strategy: org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
 
 logging:
   file: logs/${spring.application.name}.log
