--- a/account-web-service.yml
+++ b/account-web-service.yml
@@ -32,7 +32,10 @@ jpa:
   database: H2
   show-sql: true
   hibernate:
-    ddl-auto: create-drop
+    ddl-auto: none
+    naming:
+        physical-strategy: org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
+        implicit-strategy: org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
 # Discovery Server Access
 eureka:
   client:
