--- a/auth-service.yml
+++ b/auth-service.yml
@@ -19,8 +19,8 @@ eureka:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
 security:
-  user:
-    password: password      
+  basic:
+    enabled: false    
 
 # Datasource and JPA configuration to be used for storing the OAuth authorization details 
 # and token store
