refactor(auth): add jpa confiuration

--- a/auth-service.yml
+++ b/auth-service.yml
@@ -23,6 +23,14 @@ spring:
     h2:
         console:
             enabled: true
+    jpa:
+        database-platform: org.hibernate.dialect.H2Dialect
+        database: H2
+        hibernate:
+            ddl-auto: none
+            naming:
+                physical-strategy: org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
+                implicit-strategy: org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
 # Discovery Server Access
 eureka:
     instance:
