feat(uaa): change rabbitMQ config

--- a/uaa-web-service.yml
+++ b/uaa-web-service.yml
@@ -28,7 +28,7 @@ spring:
     # RabbitMQ configuration
     rabbitmq:
         host: 192.168.0.53
-        username: sergio11
+        username: sergio
         password: bisite00
     cloud:
         stream:
