--- a/offline-notification-storage.yml
+++ b/offline-notification-storage.yml
@@ -6,9 +6,10 @@ spring:
 ---
 spring:
   profiles: default
-rabbitMQConfig:
-  alternateExchangeName: users_alt.fanout
-  alternateQueueName: users_alt
-  brokerHost: localhost
-  brokerUsername: guest
-  brokerPassword: guest
+rabbitmq:
+  host: localhost
+  username: guest
+  password: guest
+  alternate-exchange:
+    name: users_alt.fanout
+    queue: users_alt
