feat(offline-notification): add offline notification storage microservice configuration

--- a/offline-notification-storage.yml
+++ b/offline-notification-storage.yml
@@ -13,3 +13,6 @@ rabbitmq:
   alternate-exchange:
     name: users_alt.fanout
     queue: users_alt
+  deadletters-exchange:
+    name: deadletters.fanout
+    queue: deadletters
