refactor(uaa-web): change spring cloud stream configuration

--- a/uaa-web-service.yml
+++ b/uaa-web-service.yml
@@ -27,22 +27,24 @@ spring:
                 implicit-strategy: org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
     cloud:
         stream:
-            bindings:
-                output:
-                    destination: users.direct
-                    binder: rabbit1
-            binders:
-                rabbit1:
-                    type: rabbit
-                    exchangeType: direct
-                    environment:
-                        spring:
-                            rabbitmq:
-                                host: localhost
-                                port: 5672
-                                username: guest
-                                password: guest
-                                virtual-host: /
+            rabbit:
+                bindings:
+                    output:
+                        destination: users.direct
+                        binder: rabbit1
+                        producer:
+                            exchangeType: direct
+                binders:
+                    rabbit1:
+                        type: rabbit
+                        environment:
+                            spring:
+                                rabbitmq:
+                                    host: localhost
+                                    port: 5672
+                                    username: guest
+                                    password: guest
+                                    virtual-host: /
 # Discovery Server Access
 eureka:
     instance:
