--- a/uaa-web-service.yml
+++ b/uaa-web-service.yml
@@ -34,6 +34,8 @@ spring:
                         binder: rabbit1
                         producer:
                             exchangeType: direct
+                            routingKeyExpression: 'user-12345'
+                            declareExchange: false
                 binders:
                     rabbit1:
                         type: rabbit
