--- a/uaa-web-service.yml
+++ b/uaa-web-service.yml
@@ -34,7 +34,7 @@ spring:
                         binder: rabbit1
                         producer:
                             exchangeType: direct
-                            routingKeyExpression: user-12345
+                            routingKeyExpression: '12345'
                             declareExchange: false
                 binders:
                     rabbit1:
