refactor(uaa-web): change Spring Cloud Stream Config

--- a/uaa-web-service.yml
+++ b/uaa-web-service.yml
@@ -28,8 +28,9 @@ spring:
     cloud:
         stream:
             bindings:
-                user.notifications:
+                userNotifications:
                     destination: users.direct
+                    contentType: application/json
                     binder: rabbit1
                     producer:
                         exchangeType: direct
