refactor(notification-service): change config file from offline-notification-storage to notification-service

--- a/notification-service.yml
+++ b/notification-service.yml
@@ -36,9 +36,10 @@ rabbitmq:
     queue: deadletters
   admin-exchange:
     name: admin.topic
-    -
-      name: users_manadgement
-      routing-key: admin.user
+    queues:
+      -
+        name: users_manadgement
+        routing-key: admin.user
 
 swagger:
   group-name: notifications
