refactor(notification): change list to map on admin queues configuration

--- a/notification-service.yml
+++ b/notification-service.yml
@@ -37,7 +37,7 @@ rabbitmq:
   admin-exchange:
     name: admin.topic
     queues:
-      -
+      users:
         name: users_manadgement
         routing-key: admin.user
 
