refactor(notification): enable debug for app

--- a/notification-service.yml
+++ b/notification-service.yml
@@ -66,3 +66,4 @@ logging:
   file: logs/${spring.application.name}.log
   level:
     org.springframework.security: DEBUG
+    sanchez.sergio: DEBUG
